# pyWebmConverter

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RUNNING.md  pyWebMConverter.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  webmconverter.py
.github/workflows/: main.yml  pylint.yml
Output/: .gitignore
pyWebMConverter/: __init__.py  audio_processor.py  command_builder.py  conf.ini  constants.py  converter.py  ffmpeg_gui.py  ffmpeg_worker.py  main.py  video_editor.py
pyWebMConverter/Output/: .gitignore
pyWebmConverter/: __init__.py  __main__.py  audio_processor.py  command_builder.py  constants.py  ffmpeg_gui.py  ffmpeg_worker.py  video_editor.py
test/: context.py  test_basic.py
