[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyWebmConverter"
version = "1.2.0-dev"
description = "A Python GUI application for converting video files to WebM format"
readme = "README.md"
license = {text = "Unlicense"}
authors = [{name = "pyWebmConverter Contributors"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "PyQt5>=5.15.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "pytest-github-actions-annotate-failures>=0.1",
    "pylint>=2.0",
]

[project.scripts]
pywebmconverter = "pyWebmConverter.ffmpeg_gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/pyWebmConverter"
"Bug Reports" = "https://github.com/yourusername/pyWebmConverter/issues"
"Source Code" = "https://github.com/yourusername/pyWebmConverter"

[tool.setuptools]
packages = ["pyWebmConverter"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 100
